--- a/templates/includes/sidebar/macros.jinja
+++ b/templates/includes/sidebar/macros.jinja
@@ -2,6 +2,6 @@
   {%- if no_icon -%}
     {{ name }}
   {%- else -%}
-    <i class="fa fa-{{ icon }} fa-lg"></i><span class="icon-label">{{ name }}</span>
+    <i class="icon-{{ icon }}"></i><span class="icon-label">{{ name }}</span>
   {%- endif -%}
 {%- endmacro %}
