--- a/templates/includes/sidebar/social.html
+++ b/templates/includes/sidebar/social.html
@@ -11,11 +11,7 @@
       {% else %}
         {% set name_sanitized = s[0]|lower|replace('+','-plus')|replace(' ','-') %}
       {% endif %}
-      {% if name_sanitized in ['flickr', 'slideshare', 'instagram', 'spotify', 'stack-overflow', 'weibo', 'line-chart', 'home', 'user', 'users', 'envelope', 'envelope-o', 'stack-exchange', 'hacker-news'] %}
-        {% set iconattributes = '"fa fa-' ~ name_sanitized ~ ' fa-lg"' %}
-      {% else %}
-        {% set iconattributes = '"fa fa-' ~ name_sanitized ~ '-square fa-lg"' %}
-      {% endif %}
+        {% set iconattributes = '"icon-' ~ name_sanitized ~ '"' %}
     <li class="list-group-item"><a href="{{ s[1] }}"><i class={{ iconattributes }}></i> {{ s[0] }}</a></li>
     {% endfor %}
   </ul>
