--- a/templates/archives.html
+++ b/templates/archives.html
@@ -3,7 +3,7 @@
 {% block breadcrumbs %}
     {% if DISPLAY_BREADCRUMBS %}
     <ol class="breadcrumb">
-        <li><a href="{{ SITEURL }}" title="{{ SITENAME }}"><i class="fa fa-home fa-lg"></i></a></li>
+        <li><a href="{{ SITEURL }}" title="{{ SITENAME }}"><i class="icon-home"></i></a></li>
         <li class="active">{{ _('Archives') }}</li>
     </ol>
     {% endif %}
