--- a/templates/includes/taglist.html
+++ b/templates/includes/taglist.html
@@ -1,9 +1,8 @@
 {% if article.tags %}
-<span class="label label-default">{{ _('Tags') }}</span>
-{% for tag in article.tags %}
-	<a href="{{ SITEURL }}/{{ tag.url }}">{{ tag }}</a>
-    {% if not loop.last %}
-        /
-    {% endif %}
-{% endfor %}
+<span class="tags">
+    <i class="icon-tag"></i>
+    {% for tag in article.tags %}
+        <a href="{{ SITEURL }}/{{ tag.url }}">{{ tag }}</a>{% if not loop.last %}, {% endif %}
+    {% endfor %}
+</span>
 {% endif %}
