Update pagination classes

--- a/templates/includes/pagination.html
+++ b/templates/includes/pagination.html
@@ -1,36 +1,36 @@
 {% if articles_page and articles_paginator.num_pages > 1 %}
     {% if USE_PAGER %}
-        <ul class="pager">
+        <ul class="pagination">
             {% if articles_page.has_previous() %}
-                <li class="previous"><a href="{{ SITEURL }}/{{ articles_previous_page.url }}">&larr; {{ _('Newer') }}</a></li>
+                <li class="page-item"><a class="page-link" href="{{ SITEURL }}/{{ articles_previous_page.url }}">&larr; {{ _('Newer') }}</a></li>
             {% else %}
-                <li class="previous disabled"><a href="#">&larr; {{ _('Newer') }}</a></li>
+                <li class="page-item disabled"><a class="page-link" href="#">&larr; {{ _('Newer') }}</a></li>
             {% endif %}
             {% if articles_page.has_next() %}
-                <li class="next"><a
+                <li class="page-item"><a class="page-link"
                         href="{{ SITEURL }}/{{ articles_next_page.url }}">{{ _('Older') }} &rarr;</a></li>
             {% else %}
-                <li class="next disabled"><a href="#">{{ _('Older') }} &rarr;</a></li>
+                <li class="page-item disabled"><a class="page-link" href="#">{{ _('Older') }} &rarr;</a></li>
             {% endif %}
         </ul>
     {% else %}
         <ul class="pagination">
             {% if articles_page.has_previous() %}
                 {% set num = articles_page.previous_page_number() %}
-                <li class="prev"><a href="{{ SITEURL }}/{{ articles_previous_page.url }}">&laquo;</a>
+                <li class="page-item"><a class="page-link" href="{{ SITEURL }}/{{ articles_previous_page.url }}">&laquo;</a>
                 </li>
             {% else %}
-                <li class="prev disabled"><a href="#">&laquo;</a></li>
+                <li class="page-item disabled"><a class="page-link" href="#">&laquo;</a></li>
             {% endif %}
             {% for num in range( 1, 1 + articles_paginator.num_pages ) %}
-                    <li class="{{ 'active' if num == articles_page.number else '' }}"><a
+                    <li class="page-item {{ 'active' if num == articles_page.number else '' }}"><a class="page-link"
                             href="{{ SITEURL }}/{{ articles_paginator.page(num).url if num > 1 else articles_paginator.page(1).url }}">{{ num }}</a></li>
                 {% endfor %}
             {% if articles_page.has_next() %}
-                <li class="next"><a
+                <li class="page-item"><a class="page-link"
                         href="{{ SITEURL }}/{{ articles_next_page.url }}">&raquo;</a></li>
             {% else %}
-                <li class="next disabled"><a href="#">&raquo;</a></li>
+                <li class="page-item disabled"><a class="page-link" href="#">&raquo;</a></li>
             {% endif %}
         </ul>
     {% endif %}
