--- a/templates/tags.html
+++ b/templates/tags.html
@@ -14,16 +14,14 @@
 {% block content %}
     <section id="tags">
         <h1>{{ _('Tags for') }} {{ SITENAME }}</h1>
-        <div class="panel-group" id="accordion">
+        <div id="accordion" role="tablist">
             {%- for tag, articles in tags|sort %}
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h4 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse-{{tag.slug}}">{{ tag }} <span class="badge pull-right">{{ articles|count }}</span></a>
-                    </h4>
-                </div>
-                <div id="collapse-{{tag.slug}}" class="panel-collapse collapse">
-                    <div class="panel-body">
+            <div class="card">
+                <h4 class="card-header">
+                    <a class="d-block" data-toggle="collapse" data-parent="#accordion" href="#collapse-{{tag.slug}}">{{ tag }} <span class="badge badge-default float-right">{{ articles|count }}</span></a>
+                </h4>
+                <div id="collapse-{{tag.slug}}" class="collapse" role="tabpanel">
+                    <div class="card-block">
                         {% for article in articles %}
                         <p><span class="categories-timestamp"><time datetime="{{ article.date.isoformat() }}">{{ article.locale_date }}</time></span> <a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></p>
                         {% endfor %}
