--- a/templates/article.html
+++ b/templates/article.html
@@ -80,8 +80,8 @@
                 </h1>
             </header>
             <div class="entry-content">
-                <div class="panel">
-                    <div class="panel-body">
+                <div class="card">
+                    <div class="card-block">
                         {% include "includes/article_info.html" %}
                     </div>
                 </div>
