--- a/templates/article.html
+++ b/templates/article.html
@@ -70,7 +70,7 @@
 {% block content %}
     <section id="content">
         <article>
-            <header class="page-header">
+            <header>
                 <h1>
                     <a href="{{ SITEURL }}/{{ article.url }}"
                        rel="bookmark"
