--- a/templates/includes/sidebar/tag_cloud.html
+++ b/templates/includes/sidebar/tag_cloud.html
@@ -15,7 +15,7 @@
   <a href="{{ SITEURL }}/{{ TAGS_URL }}"><h4>{{ title(_('Tags'), DISABLE_SIDEBAR_TITLE_ICONS, icon='tags') }}</h4></a>
   <ul class="list-group {% if DISPLAY_TAGS_INLINE %}list-inline tagcloud{% endif %}" id="tags">
     {% for tag in tags %}
-    <li class="list-group-item tag-{{ tag.1 }}">
+    <li class="list-group-item {% if DISPLAY_TAGS_INLINE %}list-inline-item{% endif %} tag-{{ tag.1 }}">
       <a href="{{ SITEURL }}/{{ tag.0.url }}">
         {{- tag.0 -}}
       </a>
