Class names update

--- a/templates/article_list.html
+++ b/templates/article_list.html
@@ -13,7 +13,7 @@
                 <div class="summary">{{ article.summary }}
                     {% include 'includes/comment_count.html' %}
                     <div class="clearfix">
-                        <a class="btn btn-default btn-md pull-right" href="{{ SITEURL }}/{{ article.url }}">{{ _('more') }} ...</a>
+                        <a class="btn btn-secondary btn-md pull-right" href="{{ SITEURL }}/{{ article.url }}">{{ _('more') }} ...</a>
                     </div>
                 </div>
             </article>
