--- a/templates/article.html
+++ b/templates/article.html
@@ -54,14 +54,14 @@
     {% if DISPLAY_BREADCRUMBS %}
         {% if DISPLAY_CATEGORY_IN_BREADCRUMBS %}
             <ol class="breadcrumb">
-                <li><a href="{{ SITEURL }}" title="{{ SITENAME }}"><i class="icon-home"></i></a></li>
-                <li><a href="{{ SITEURL }}/{{ article.category.url }}" title="{{ article.category }}">{{ article.category }}</a></li>
-                <li class="active">{{ article.title }}</li>
+                <li class="breadcrumb-item"><a href="{{ SITEURL }}" title="{{ SITENAME }}"><i class="icon-home"></i></a></li>
+                <li class="breadcrumb-item"><a href="{{ SITEURL }}/{{ article.category.url }}" title="{{ article.category }}">{{ article.category }}</a></li>
+                <li class="breadcrumb-item active">{{ article.title }}</li>
             </ol>
         {% else %}
             <ol class="breadcrumb">
-                <li><a href="{{ SITEURL }}" title="{{ SITENAME }}"><i class="icon-home"></i></a></li>
-                <li class="active">{{ article.title }}</li>
+                <li class="breadcrumb-item"><a href="{{ SITEURL }}" title="{{ SITENAME }}"><i class="icon-home"></i></a></li>
+                <li class="breadcrumb-item active">{{ article.title }}</li>
             </ol>
         {% endif %}
     {% endif %}
