--- a/templates/author.html
+++ b/templates/author.html
@@ -5,9 +5,9 @@
 {% block breadcrumbs %}
     {% if DISPLAY_BREADCRUMBS %}
         <ol class="breadcrumb">
-            <li><a href="{{ SITEURL }}" title="{{ SITENAME }}"><i class="icon-home"></i></a></li>
-            <li><a href="{{ SITEURL }}/{{ AUTHORS_URL|default('authors.html') }}" title="{{ _('Authors') }}">{{ _('Authors') }}</a></li>
-            <li class="active">{{ AUTHOR }}</li>
+            <li class="breadcrumb-item"><a href="{{ SITEURL }}" title="{{ SITENAME }}"><i class="icon-home"></i></a></li>
+            <li class="breadcrumb-item"><a href="{{ SITEURL }}/{{ AUTHORS_URL|default('authors.html') }}" title="{{ _('Authors') }}">{{ _('Authors') }}</a></li>
+            <li class="breadcrumb-item active">{{ AUTHOR }}</li>
         </ol>
     {% endif %}
 {% endblock %}
