--- a/templates/authors.html
+++ b/templates/authors.html
@@ -5,8 +5,8 @@
 {% block breadcrumbs %}
     {% if DISPLAY_BREADCRUMBS %}
         <ol class="breadcrumb">
-            <li><a href="{{ SITEURL }}" title="{{ SITENAME }}"><i class="icon-home"></i></a></li>
-            <li class="active">{{ _('Authors') }}</li>
+            <li class="breadcrumb-item"><a href="{{ SITEURL }}" title="{{ SITENAME }}"><i class="icon-home"></i></a></li>
+            <li class="breadcrumb-item active">{{ _('Authors') }}</li>
         </ol>
     {% endif %}
 {% endblock %}
