--- a/templates/categories.html
+++ b/templates/categories.html
@@ -4,8 +4,8 @@
 {% block breadcrumbs %}
     {% if DISPLAY_BREADCRUMBS %}
     <ol class="breadcrumb">
-        <li><a href="{{ SITEURL }}" title="{{ SITENAME }}"><i class="icon-home"></i></a></li>
-        <li class="active">{{ _('Categories') }}</li>
+        <li class="breadcrumb-item"><a href="{{ SITEURL }}" title="{{ SITENAME }}"><i class="icon-home"></i></a></li>
+        <li class="breadcrumb-item active">{{ _('Categories') }}</li>
     </ol>
     {% endif %}
 {% endblock %}
