--- a/templates/page.html
+++ b/templates/page.html
@@ -36,9 +36,9 @@
 {% block breadcrumbs %}
     {% if DISPLAY_BREADCRUMBS %}
     <ol class="breadcrumb">
-        <li><a href="{{ SITEURL }}" title="{{ SITENAME }}"><i class="icon-home"></i></a></li>
+        <li class="breadcrumb-item"><a href="{{ SITEURL }}" title="{{ SITENAME }}"><i class="icon-home"></i></a></li>
 	  {% if page.url %}
-        <li class="active">{{ page.title }}</li>
+        <li class="breadcrumb-item active">{{ page.title }}</li>
 	  {% endif %}
     </ol>
     {% endif %}
