--- a/templates/tag.html
+++ b/templates/tag.html
@@ -7,9 +7,9 @@
 {% block breadcrumbs %}
     {% if DISPLAY_BREADCRUMBS %}
     <ol class="breadcrumb">
-        <li><a href="{{ SITEURL }}" title="{{ SITENAME }}"><i class="icon-home"></i></a></li>
-        <li><a href="{{ SITEURL }}/{{ TAGS_URL }}" title="Tags">Tags</a></li>
-        <li class="active">{{ tag }}</li>
+        <li class="breadcrumb-item"><a href="{{ SITEURL }}" title="{{ SITENAME }}"><i class="icon-home"></i></a></li>
+        <li class="breadcrumb-item"><a href="{{ SITEURL }}/{{ TAGS_URL }}" title="Tags">Tags</a></li>
+        <li class="breadcrumb-item active">{{ tag }}</li>
     </ol>
     {% endif %}
 {% endblock %}
