--- a/templates/includes/article_info.html
+++ b/templates/includes/article_info.html
@@ -4,7 +4,7 @@
     </span>
     {% if SHOW_DATE_MODIFIED %}
         {% if article.modified %}
-          <span class="label label-default">{{ _('Modified') }}</span>
+          <span class="badge badge-default">{{ _('Modified') }}</span>
             <span class="modified">
                 <i class="icon-calendar"></i><time datetime="{{ article.modified.isoformat() }}"> {{ article.locale_modified }}</time>
             </span>
@@ -13,25 +13,25 @@
 
     {% if SHOW_SERIES %}
         {% if article.series %}
-            <span class="label label-default">{{ _('Series') }}</span>
+            <span class="badge badge-default">{{ _('Series') }}</span>
             Part {{ article.series.index}} of {{ article.series.name }}
         {% endif %}
     {% endif %}
 
     {% if SHOW_ARTICLE_AUTHOR %}
         {% if article.author %}
-            <span class="label label-default">{{ _('By') }}</span>
+            <span class="badge badge-default">{{ _('By') }}</span>
             <a href="{{ SITEURL }}/{{ article.author.url }}"><i class="icon-user"></i> {{ article.author }}</a>
         {% endif %}
     {% endif %}
 
     {% if SHOW_ARTICLE_CATEGORY %}
-        <span class="label label-default">{{ _('Category') }}</span>
+        <span class="badge badge-default">{{ _('Category') }}</span>
         <a href="{{ SITEURL }}/{{ article.category.url }}">{{ article.category }}</a>
     {% endif %}
 
     {% if PDF_PROCESSOR %}
-        <span class="label label-default">
+        <span class="badge badge-default">
             <a href="{{ SITEURL }}/pdf/{{ article.slug }}.pdf">PDF</a>
         </span>
     {% endif %}
