Update pull-x classes to float-x

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -20,7 +20,7 @@
               <p><small>{{ CUSTOM_LICENSE }}</small></p>
             {% endif %}
          </div>
-         <div class="col-xs-2"><p class="pull-right"><i class="icon-up-big"></i> <a href="#">{{ _('Back to top') }}</a></p></div>
+         <div class="col-xs-2"><p class="float-right"><i class="icon-up-big"></i> <a href="#">{{ _('Back to top') }}</a></p></div>
       </div>
    </div>
 </footer>
