--- a/templates/base.html
+++ b/templates/base.html
@@ -111,7 +111,7 @@
     {% endif %}
     {% if SITELOGO or not HIDE_SITENAME %}
     <a href="{{ SITEURL }}/" class="navbar-brand">
-        {% if SITELOGO %}<img class="img-fluid pull-left gap-right" src="{{ SITEURL }}/{{ SITELOGO }}" width="{{ SITELOGO_SIZE }}"/> {% endif %}
+        {% if SITELOGO %}<img class="img-fluid float-left gap-right" src="{{ SITEURL }}/{{ SITELOGO }}" width="{{ SITELOGO_SIZE }}"/> {% endif %}
         {% if not HIDE_SITENAME %}{{ SITENAME }}{% endif %}
     </a>
     {% endif %}
