--- a/templates/base.html
+++ b/templates/base.html
@@ -175,7 +175,7 @@
         {% endblock %}
         </div>
         {% if not HIDE_SIDEBAR or ABOUT_ME or AVATAR %}
-        <div class="col-sm-3{% if SIDEBAR_ON_LEFT %} col-sm-pull-12{% endif %}" id="sidebar">
+        <div class="col-sm-3{% if SIDEBAR_ON_LEFT %} pull-sm-12{% endif %}" id="sidebar">
             <aside>
             {% if ABOUT_ME or AVATAR %}
                 {% include 'includes/aboutme.html' %}
