--- a/templates/base.html
+++ b/templates/base.html
@@ -165,9 +165,9 @@
 <div class="container{% if BOOTSTRAP_FLUID %}-fluid{% endif %}">
     <div class="row">
         {% if not HIDE_SIDEBAR or ABOUT_ME or AVATAR %}
-        <div class="col-sm-9{% if SIDEBAR_ON_LEFT %} push-sm-3{% endif %}">
+        <div class="col-md-9{% if SIDEBAR_ON_LEFT %} push-md-3{% endif %}">
         {% else %}
-        <div class="col-lg-12">
+        <div class="col-xl-12">
         {% endif %}
         {% block breadcrumbs %}
         {% endblock %}
@@ -175,7 +175,7 @@
         {% endblock %}
         </div>
         {% if not HIDE_SIDEBAR or ABOUT_ME or AVATAR %}
-        <div class="col-sm-3{% if SIDEBAR_ON_LEFT %} pull-sm-12{% endif %}" id="sidebar">
+        <div class="col-md-3{% if SIDEBAR_ON_LEFT %} pull-md-12{% endif %}" id="sidebar">
             <aside>
             {% if ABOUT_ME or AVATAR %}
                 {% include 'includes/aboutme.html' %}
