Replace wells with cards

--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -1,5 +1,5 @@
 <!-- Sidebar -->
-<section class="well well-sm">
+<section class="card">
   <ul class="list-group list-group-flush">
     {% include 'includes/sidebar/optional_top.html' ignore missing %}
     {% include 'includes/sidebar/social.html' %}
