--- a/templates/article_list.html
+++ b/templates/article_list.html
@@ -6,8 +6,10 @@
                 <time datetime="{{ article.date.isoformat() }}"> {{ article.locale_date }}</time>
                 <h2><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h2>
                 {% if DISPLAY_ARTICLE_INFO_ON_INDEX %}
-                    <div class="well well-sm">
-                        {% include "includes/article_info.html" %}
+                    <div class="card">
+                        <div class="card-block">
+                            {% include "includes/article_info.html" %}
+                        </div>
                     </div>
                 {% endif %}
                 <div class="summary">{{ article.summary }}
