--- a/templates/includes/related-posts.html
+++ b/templates/includes/related-posts.html
@@ -1,10 +1,12 @@
 {% if article.related_posts %}
-<section class="well" id="related-posts">
-    <h4>{{ RELATED_POSTS_TEXT|default('Related Posts:') }}</h4>
-    <ul>
-    {% for related_post in article.related_posts %}
-        <li><a href="{{ SITEURL }}/{{ related_post.url }}">{{ related_post.title }}</a></li>
-    {% endfor %}
-    </ul>
+<section class="card" id="related-posts">
+	<div class="card-block">
+        <h4 class="card-title">{{ RELATED_POSTS_TEXT|default('Related Posts:') }}</h4>
+        <ul class="card-text">
+        {% for related_post in article.related_posts %}
+            <li><a href="{{ SITEURL }}/{{ related_post.url }}">{{ related_post.title }}</a></li>
+        {% endfor %}
+        </ul>
+    </div>
 </section>
 {% endif %}
