Add padding to <pre>

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,6 +2,10 @@ body {
     padding-top: 7rem;
 }
 
+pre {
+    padding: 1rem;
+}
+
 #sidebar .list-group, #sidebar .list-group-item {
     background-color: transparent;
 }
