--- a/templates/article_list.html
+++ b/templates/article_list.html
@@ -15,7 +15,7 @@
                 <div class="summary">{{ article.summary }}
                     {% include 'includes/comment_count.html' %}
                     <div class="clearfix">
-                        <a class="btn btn-secondary btn-md float-right" href="{{ SITEURL }}/{{ article.url }}">{{ _('more') }} ...</a>
+                        <a class="btn btn-secondary btn-md float-right" href="{{ SITEURL }}/{{ article.url }}">{{ _('more') }}…</a>
                     </div>
                 </div>
             </article>
