--- a/static/css/style.css
+++ b/static/css/style.css
@@ -243,3 +243,7 @@ figure.floatcenter, .align-center {
 .gap-left {
   margin-left: 10px;
 }
+
+.article-list article + hr:last-child {
+    display: none;
+}
