includes/optional_navbar_end.html in base and MathJax

--- a/templates/base.html
+++ b/templates/base.html
@@ -100,6 +100,11 @@
               title="{{ SITENAME }} {{ category }} ATOM Feed"/>
     {% endif %}
 
+    {% if MATHJAX %}
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+    {% endif %}
+
 </head>
 <body>
 
@@ -153,6 +158,9 @@
         {% endif %}
         </ul>
     </div>
+
+    {% include 'includes/optional_navbar_end.html' ignore missing %}
+
     <!-- /.navbar-collapse -->
 </nav> <!-- /.navbar -->
 <!-- Banner -->
